--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "fixed_trigonometry"
 version = "0.1.0"
 edition = "2018"
 authors = ["Erik Buer"]
-description = "No-STD numeric array."
+description = "Fixed point numerical approimations to trigonometric functions."
 readme = "README.md"
 repository = "https://github.com/ErikBuer/Fixed-Trigonometry"
 license-file = "LICENSE"
