--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ crate-type = ["lib"]
 [dependencies]
 fixed = "1.10.0"
 
+[dev-dependencies]
+plotters = "^0.3.1"
+
 [dependencies.num]
 version = "0.4"
 default-features = false
