--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ crate-type = ["lib"]
 
 
 [dependencies]
-fixed     = "1.10.0"
-cordic    = "0.1.5"
-mixed-num = "^0.1.8"
+fixed     = "1.13"
+cordic    = "0.1"
+mixed-num = "0.1"
 
 [dev-dependencies]
 plotters = "^0.3.1"
