fix: corrects ifft scaling chore: bumps mixed-num version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fixed_trigonometry"
-version = "0.4.2"
-edition = "2021"
+version = "0.4.3"
+edition = "2022"
 authors = ["Erik Buer"]
 description = "Fixed point numerical approimations to trigonometric functions."
 readme = "README.md"
@@ -19,13 +19,13 @@ crate-type = ["lib"]
 
 
 [dependencies]
-fixed     = "1.13"
-cordic    = "0.1"
-mixed-num = "0.1"
+fixed     = "^1.13"
+cordic    = "^0.1"
+mixed-num = "^0.5"
 
 [dev-dependencies]
 plotters = "^0.3.1"
 
 [dependencies.num]
-version = "0.4"
+version = "^0.4"
 default-features = false
