Add an alloc feature to control need for a global allocaror
When enabled, the alloc feature will include parts of the library that make use of a global allocator.
This is enabled by default to keep the default library functionality consistent with previous releases.

Signed-off-by: Matt Spencer matthew@thespencers.me.uk

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,16 @@ keywords = ["dsp", "no_std"]
 exclude = ["figures/"]
 
 [lib]
-path  = "src/lib.rs"
+path = "src/lib.rs"
 bench = false
-doc   = true
-test  = true
+doc = true
+test = true
 crate-type = ["lib"]
 
 
 [dependencies]
-fixed     = "^1.13"
-cordic    = "^0.1"
+fixed = "^1.13"
+cordic = "^0.1"
 mixed-num = "^0.5"
 
 [dev-dependencies]
@@ -29,3 +29,7 @@ plotters = "^0.3.1"
 [dependencies.num]
 version = "^0.4"
 default-features = false
+
+[features]
+default = ["alloc"]
+alloc = []
